...
        child: Form(
          key: _key,
          child: Column(
            children: [
              TextFormField(
                controller: _emailTextController,
                key: const ValueKey('email_id'),
                decoration: const InputDecoration(hintText: 'Enter Email Id'),
                validator: (value) => Validator.validateEmail(value ?? ''),
              ),
              TextFormField(
                controller: _passwordTextController,
                key: const ValueKey('password'),
                decoration: const InputDecoration(hintText: 'Enter password'),
                validator: (value) => Validator.validatePassword(value ?? ''),
              ),
              const SizedBox(
                height: 20,
              ),
...
